[package]
name = "task-hookrs"
version = "0.4.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Mario Krehl <mario-krehl@gmx.de>",
          ]

description = "Crate to work with taskwarrior exported JSON"
keywords = ["json", "taskwarrior", "todo", "import", "export"]

documentation = "https://matthiasbeyer.github.io/task-hookrs/task_hookrs/index.html"
homepage      = "https://github.com/matthiasbeyer/task-hookrs"
repository    = "https://github.com/matthiasbeyer/task-hookrs"
readme        = "./README.md"
license       = "MPL-2.0"

[dependencies]
chrono = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "0.5", features = ["serde"] }

[dev-dependencies]
env_logger = "0.4"

