[package]
name = "task-hookrs"
version = "0.7.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Mario Krehl <mario-krehl@gmx.de>",
           "Malte Brandy <malte.brandy@maralorn.de>",
          ]

description = "Crate to work with taskwarrior exported JSON"
keywords = ["json", "taskwarrior", "todo", "import", "export"]

repository    = "https://git.beyermatthi.as/task-hookrs"
readme        = "./README.md"
license       = "MPL-2.0"

[badges]
travis-ci   = { repository = "matthiasbeyer/task-hookrs", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
chrono         = "0.4"
serde          = "1"
serde_derive   = "1"
serde_json     = "1"
uuid           = { version = "1.2", features = ["serde", "v4"] }
log            = "0.4"
derive_builder = "0.9.0"
failure        = "0.1"

[dev-dependencies]
env_logger = "0.7"
